<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.detail.DetailUserActivity"
    tools:keep="@layout/activity_detail_user">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/BackgroundDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/error"
            style="@style/InverseTextColor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/error"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/retry"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/error"
            app:layout_constraintStart_toStartOf="@+id/error"
            app:layout_constraintTop_toBottomOf="@+id/error"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/detail_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="detail_username,n_repo,detail_profile_image,location,building,detail_users_name,pin,company,repo,followers,following,view_pager,tabs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detail_profile_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:barrierMargin="8dp"
            app:constraint_referenced_ids="detail_profile_image" />

        <TextView
            android:id="@+id/detail_users_name"
            style="@style/InverseTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="@+id/detail_profile_image"
            app:layout_constraintStart_toStartOf="@+id/detail_profile_image"
            app:layout_constraintTop_toBottomOf="@+id/barrier_image" />

        <TextView
            android:id="@+id/detail_username"
            style="@style/InverseTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/username"
            app:layout_constraintEnd_toEndOf="@+id/detail_users_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/detail_users_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_users_name" />

        <TextView
            android:id="@+id/followers"
            style="@style/InverseTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/followers"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/following"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_username" />

        <TextView
            android:id="@+id/following"
            style="@style/InverseTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/following"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/followers"
            app:layout_constraintTop_toBottomOf="@+id/detail_username" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="followers,following" />

        <ImageView
            android:id="@+id/pin"
            style="@style/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/picture"
            app:layout_constraintEnd_toStartOf="@+id/location"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier_follower" />

        <TextView
            android:id="@+id/location"
            style="@style/InverseTextColor"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pin"
            app:layout_constraintTop_toTopOf="@+id/pin" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="pin,location" />

        <ImageView
            android:id="@+id/building"
            style="@style/Company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/building"
            app:layout_constraintEnd_toStartOf="@+id/company"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier_location" />

        <TextView
            android:id="@+id/company"
            style="@style/InverseTextColor"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/building"
            app:layout_constraintTop_toTopOf="@+id/building" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="building,company" />

        <TextView
            android:id="@+id/repo"
            style="@style/InverseTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/repo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier_company" />

        <TextView
            android:id="@+id/n_repo"
            style="@style/InverseTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="120dp"
            android:text="@string/n_repo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/repo"
            app:layout_constraintStart_toStartOf="@+id/repo"
            app:layout_constraintTop_toBottomOf="@+id/repo"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/tab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/n_repo"
            app:tabBackground="@color/dark_gray"
            app:tabIndicatorColor="@color/github_orange"
            app:tabRippleColor="@color/light_gray"
            app:tabSelectedTextColor="@color/github_white"
            app:tabTextColor="@color/light_gray" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tabs"
            app:layout_constraintStart_toStartOf="@+id/tabs"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/favorite_activity"
            android:foregroundGravity="bottom"
            app:fabSize="auto"
            app:layout_anchor="@id/view_pager"
            app:layout_anchorGravity="bottom|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_favorite_border" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>